--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="accept">Bienvenido de vuelta!! :D</string>
     <string name="terminos">Acepto los terminos y condiciones.</string>
     <string name="prod">Productos cerca de ti.</string>
+    <string name="bedu">Bedu shop</string>
+    <string name="correo">Correo electronico</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
